@@ -66,7 +66,8 @@ Abbreviated Changelog from 2.3.5 Final
 - Fixed bug in logonUrl-handling
 - Fixed so repositories can be placed below other repositories dns-names like http://www.mycomp.com/sitex
 - Fixed so deliver working and preview can be protected and that the decorated view never can be shown in live mode.
-
+- Removed a few e.printStacktrace() in favour for more log4j-statements and also modified the log4j.xml to not show messeges about mapping of url failing or components missing in the standard log but in a infoglue log instead. All severe errors should still come out in the normal catalina log.
+- Fixed so one can have steps in workflows on other servers and also jump between protocols like http and https.
 
 -------------------------------------------------------------------------------------
 - InfoGlue 2.3.5 Final
